# darktide-extractor

./: .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: _ci-build-test.yml  _ci-windows-010.yml  ci.yml  pr.yml  release.yml
crates/darktide-bundle/: Cargo.toml
crates/darktide-bundle/src/: bundle.rs  dictionary.rs  error.rs  hash.rs  lib.rs  lua.rs  oodle.rs  testutil.rs  types.rs
crates/darktide-bundle/tests/: decompress.rs  normalize.rs
crates/darktide-cli/: Cargo.toml
crates/darktide-cli/src/: main.rs
crates/darktide-extractor-cli/: CHANGELOG.md  Cargo.toml
crates/darktide-extractor-cli/src/: main.rs
crates/darktide-ffi/: Cargo.toml  darktide.h
crates/darktide-ffi/src/: lib.rs
crates/darktide-ffi/tests/: ffi_lifecycle.rs
docs/: bundle-format.md  luajit-bytecode-format.md  oodle-library.md
src/: discovery.rs  main.rs
tests/: integration.rs
