[package]
name = "darktide-extractor-cli"
version = "0.2.1"
edition = "2021"
description = "CLI tool for extracting Darktide resource bundles"

[[bin]]
name = "dtex"
path = "src/main.rs"

[dependencies]
darktide-bundle = { path = "crates/darktide-bundle" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
darktide-bundle = { path = "crates/darktide-bundle", features = ["testutil"] }
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[workspace]
members = ["crates/darktide-bundle", "crates/darktide-ffi"]
resolver = "2"
